# learn-cuda

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cu  ncu-warpper.sh
.devcontainer/: Dockerfile  devcontainer.json
common/: arrayHelper.cu  arrayHelper.cuh  deviceInfo.cu  deviceInfo.cuh  randomHelper.cu  randomHelper.cuh  utils.cu  utils.cuh  vectorHelper.cu  vectorHelper.cuh
src/001-basic/: dynamic-parallelism.cu  graph-kernel-launch.cu  hello-world.cu  id-mapping.cu  stream-event-wait.cu  stream-kernel-launch.cu
src/002-device/: query-device-info.cu
src/003-memory/: allocate-memory.cu  host-device-memory-copy.cu  shared-memory.cu
src/004-vector/: vector-add.cu  vector-copy.cu  vector-dot.cu  vector-sum.cu
src/005-matrix/: gemm-k-scaling.cu  matrix-multiply-wmma.cu  matrix-multiply.cu  matrix-transpose.cu  matrix-vector-multiply.cu
src/006-ptx/: add-one-inline-ptx.cu  add-one-inline.cu  add-one-inline.ptx  add-one.ptx  compile_ptx.sh
src/util/: bench.hpp  cuda-util.cuh  matrix.cuh  util.cuh  vector.hpp
task/: manualMemory.cu  manualMemory.cuh  memoryManage.cu  memoryManage.cuh  misalignedRead.cu  misalignedRead.cuh  nestHelloWorld.cu  nestHelloWorld.cuh  pinnedMemory.cu  unifiedMemory.cu  vectorAdd.cu  vectorAdd.cuh  vectorSum.cu  vectorSum.cuh  zeroCopyMemory.cu  zeroCopyMemory.cuh
task/algorithm/: matrixMultiplication.cu  matrixMultiplication.cuh  matrixTranspose.cu  matrixTranspose.cuh  vectorAdd.cu  vectorAdd.cuh  vectorSum.cu  vectorSum.cuh
task/instruction/: floatPrecision.cu  floatPrecision.cuh
task/memory/: manualMemory.cu  misalignedRead.cu  pinnedMemory.cu  pinnedMemory.cuh  unifiedMemory.cu  unifiedMemory.cuh  zeroCopyMemory.cu
task/sharedMemory/: sharedMemoryVectorSum.cu  sharedMemoryVectorSum.cuh
task/stream/: graphConcurrent.cu  graphConcurrent.cuh  multiKernelConcurrent.cu  multiKernelConcurrent.cuh  syncStreamWithEvent.cu  syncStreamWithEvent.cuh  vectorAddMultiStream.cu  vectorAddMultiStream.cuh
